1、设配AndroidX 2、Luban压缩支持自定义图片质量，而不是默认60

--- a/gradle.properties
+++ b/gradle.properties
@@ -16,3 +16,13 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+
+compileSdkVersion=31
+buildToolsVersion=30.0.2
+targetSdkVersion=29
+minSdkVersion=21
+
+gradleVersion=3.6.4
+kotlin_version=1.4.10
+android.useAndroidX=true
+android.enableJetifier=true
