--- a/build.gradle
+++ b/build.gradle
@@ -2,14 +2,17 @@
 
 buildscript {
     repositories {
-        jcenter()
+        // 添加阿里云 maven 地址
+        maven { url 'https://maven.aliyun.com/repository/gradle-plugin' }
+        maven { url 'https://maven.aliyun.com/repository/central' }
+        maven { url 'https://maven.aliyun.com/repository/public' }
+        maven { url 'https://maven.aliyun.com/repository/google' }
+        mavenCentral()
+        maven { url "https://jitpack.io" }
         google()
     }
     dependencies {
-        classpath('com.android.tools.build:gradle:3.1.4') {
-            force = true
-        }
-
+        classpath "com.android.tools.build:gradle:$project.gradleVersion"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -17,7 +20,13 @@ buildscript {
 
 allprojects {
     repositories {
-        jcenter()
+        // 添加阿里云 maven 地址
+        maven { url 'https://maven.aliyun.com/repository/gradle-plugin' }
+        maven { url 'https://maven.aliyun.com/repository/central' }
+        maven { url 'https://maven.aliyun.com/repository/public' }
+        maven { url 'https://maven.aliyun.com/repository/google' }
+        mavenCentral()
+        maven { url "https://jitpack.io" }
         google()
     }
 }
